# Personili_Backend

./: .gitignore  README.md  pyproject.toml  test.py
db_scripts/: db_connection.py
personili_backend/: .dockerignore  .env_prod  Dockerfile  entrypoint  entrypoint.sh  manage.py
personili_backend/.envs/.local/: .django  .postgres
personili_backend/.envs/.production/: .django  .env_prod  .postgres
personili_backend/accounts/: admin.py  factories.py  models.py  urls.py
personili_backend/accounts/migrations/: 0001_initial.py  0002_accountprofile_personili_gems.py  0002_alter_account_id_alter_accountblacklist_table.py  0002_alter_account_id_alter_accountprofile_id.py  0002_alter_accountprofile_gender.py  0002_permission_role_permissions.py  0002_remove_accountprofile_age_accountprofile_biography_and_more.py  0002_rename_active_account_is_active_and_more.py  0002_rename_user_name_accountprofile_username.py  0003_actiontoken.py  0003_alter_account_id_alter_accountprofile_gender_and_more.py  0003_alter_account_id_alter_accountprofile_id.py  0003_alter_actiontoken_expiry_date.py  0003_blacklist_ip_address_alter_account_table_and_more.py  0003_roleaccount.py  0003_rolepermission.py  0004_accountblacklist_role_delete_blacklist_and_more.py  0004_alter_account_id_alter_accountprofile_id.py  0004_alter_actiontoken_expiry_date_and_more.py  0004_rename_default_delivery_address_deliveryaddress_is_default.py  0005_alter_account_id.py  0005_alter_account_id_alter_accountprofile_age_and_more.py  0005_alter_account_id_alter_accountprofile_id.py  0005_alter_actiontoken_expiry_date.py  0005_delete_rolepermission.py  0006_alter_account_id_alter_accountprofile_id.py  0006_alter_actiontoken_expiry_date_and_more.py  0006_rename_permission_description_permission_description_and_more.py  0007_alter_account_id_alter_accountprofile_id.py  0007_alter_account_id_alter_accountprofile_id_and_more.py  0007_alter_accountblacklist_email_and_more.py  0008_alter_account_id_alter_accountprofile_id.py  0008_alter_actiontoken_expiry_date.py  0009_alter_account_id_alter_accountprofile_id.py  0009_alter_actiontoken_expiry_date.py  0010_alter_account_id_alter_accountprofile_id.py  0010_alter_actiontoken_expiry_date.py  0011_alter_account_id_alter_accountprofile_id.py  0011_alter_actiontoken_expiry_date.py  0012_alter_account_id_alter_accountprofile_id.py  (+8 more)
personili_backend/accounts/services/: user_sign_up.py
personili_backend/config/: asgi.py  urls.py  wsgi.py
personili_backend/config/settings/: base.py  local.py  production.py  test.py
personili_backend/db_scripts/: db_connection.py  factory_generator.py  init_local_db.py  populate_local_db.py
personili_backend/designs/: admin.py  factories.py  models.py  urls.py
personili_backend/designs/api/: views.py
personili_backend/designs/migrations/: 0001_initial.py  0002_alter_design_collection.py  0002_design_ai_generated.py  0002_design_price.py  0002_initial.py  0002_rename_can_be_used_with_other_designs_design_exclusive_and_more.py  0002_rename_logo_path_theme_icon_path_and_more.py  0003_design_personalizable_variant.py  0003_rename_free_design_platform_specific_and_more.py  0003_rename_free_usage_with_designer_uploads_design_limited_usage_with_designer_uploads_and_more.py  (+20 more)
personili_backend/emails/: account_creation.py  brevo_engine.py  email_utils.py
personili_backend/joud/: apps.py  models.py
personili_backend/orders/: admin.py  models.py  urls.py
personili_backend/organizations/: admin.py  factories.py  models.py
personili_backend/personalizables/: admin.py  factories.py  models.py  urls.py
personili_backend/production-docker/: Dockerfile  entrypoint
personili_backend/products/: admin.py  factories.py  models.py  urls.py
personili_backend/requirements/: production.txt  requirements-local.txt
personili_backend/security/: activation_links.py  jwt.py  jwt_utils.py  secure_tokens.py
personili_backend/templates/: base.html
personili_backend/utils/: constants.py  storages.py  utilities.py  validators.py
personili_backend/webpack/: common.config.js
personili_platform/: package.json  setup.cfg
personili_platform/config/: api_router.py  asgi.py  urls.py
personili_platform/requirements/: base.txt  local_old.txt
(+203 files in other folders)
