[tool.poetry]
name = "hih-pod-platform"
version = "1.0.0"
description = "print on demand platform for buyers and designers alike"
authors = ["heytem <heytem.boumaza@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "hih_pod_platform"}]

[tool.poetry.dependencies]
# General
python = ">=3.10, <4"
pytz ="2023.2"  # https://github.com/stub42/pytz
python-slugify= "8.0.1"  # https://github.com/un33k/python-slugify
Pillow="9.4.0"  # https://github.com/python-pillow/Pillow
argon2-cffi="21.3.0"  # https://github.com/hynek/argon2_cffi
whitenoise="6.4.0"  # https://github.com/evansd/whitenoise
redis="4.5.3"  # https://github.com/redis/redis-py
hiredis="2.2.2"  # https://github.com/redis/hiredis-py
uvicorn={ version = "0.21.1", extras = ["standard"] }  # https://github.com/encode/uvicorn

# Django
django="5.0"  # pyup: < 4.1  # https://www.djangoproject.com/
django-environ="0.10.0"  # https://github.com/joke2k/django-environ
django-model-utils="4.3.1"  # https://github.com/jazzband/django-model-utils
django-allauth="0.53.1"  # https://github.com/pennersr/django-allauth
django-redis="5.2.0"  # https://github.com/jazzband/django-redis
# Django REST Framework
djangorestframework="3.14.0"  # https://github.com/encode/django-rest-framework
django-cors-headers="3.14.0"  # https://github.com/adamchainz/django-cors-headers
# DRF-spectacular for api documentation
drf-spectacular="0.26.1"  # https://github.com/tfranzel/drf-spectacular
django-webpack-loader="1.8.1"  # https://github.com/django-webpack/django-webpack-loader
djangorestframework-simplejwt = "^5.2.2"
boto3 = "^1.26.151"
django-storages = "^1.13.2"
django-treebeard = "^4.7"

[tool.poetry.group.local]
optional = true

[tool.poetry.group.local.dependencies]
Werkzeug={version="2.2.3",extras=["watchdog"]} # https://github.com/pallets/werkzeug
ipdb="0.13.13"  # https://github.com/gotcha/ipdb
psycopg2="2.9.5"  # https://github.com/psycopg/psycopg2
watchfiles="0.18.1"  # https://github.com/samuelcolvin/watchfiles

# Testing
# ------------------------------------------------------------------------------
mypy="1.1.1"  # https://github.com/python/mypy
django-stubs="1.16.0"  # https://github.com/typeddjango/django-stubs
pytest="7.2.2"  # https://github.com/pytest-dev/pytest
pytest-sugar="0.9.6"  # https://github.com/Frozenball/pytest-sugar
djangorestframework-stubs="1.10.0"  # https://github.com/typeddjango/djangorestframework-stubs

# Documentation
# ------------------------------------------------------------------------------
sphinx="6.1.3"  # https://github.com/sphinx-doc/sphinx
sphinx-autobuild="2021.3.14" # https://github.com/GaretJax/sphinx-autobuild

# Code quality
# ------------------------------------------------------------------------------
flake8="6.0.0"  # https://github.com/PyCQA/flake8
flake8-isort="6.0.0"  # https://github.com/gforcada/flake8-isort
coverage="7.2.2"  # https://github.com/nedbat/coveragepy
black="23.1.0"  # https://github.com/psf/black
pylint-django="2.5.3"  # https://github.com/PyCQA/pylint-django
pre-commit="3.2.1"  # https://github.com/pre-commit/pre-commit

# Django
# ------------------------------------------------------------------------------
factory-boy="3.2.1"  # https://github.com/FactoryBoy/factory_boy

django-debug-toolbar="3.8.1"  # https://github.com/jazzband/django-debug-toolbar
django-extensions="3.2.1"  # https://github.com/django-extensions/django-extensions
django-coverage-plugin="3.0.0"  # https://github.com/nedbat/django_coverage_plugin
pytest-django="4.5.2"  # https://github.com/pytest-dev/pytest-django


[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn="20.1.0"  # https://github.com/benoitc/gunicorn
psycopg2="2.9.5"  # https://github.com/psycopg/psycopg2
sentry-sdk="1.17.0"  # https://github.com/getsentry/sentry-python

# Django
# ------------------------------------------------------------------------------
django-anymail={version="9.1", extras=["sendinblue"]}  # https://github.com/anymail/django-anymail



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
